--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -14,7 +14,7 @@
     <string name="app_layout_auto">Automático</string>
     <string name="app_layout_mobile">Diseño para móviles</string>
     <string name="app_layout_tv">Diseño para TV</string>
-    <string name="app_layout_apply">Aplcar</string>
+    <string name="app_layout_apply">Aplcar</string> 
     <string name="providers_all_languages">Todos los idiomas</string>
     <string name="providers_choose_title">Seleccionar proveedor</string>
     <string name="main_menu_change_provider">Cambiar proveedor</string>
@@ -173,6 +173,7 @@
     <string name="settings_about_version">Versión</string>
     <string name="settings_about_version_name">Versión %s</string>
     <string name="settings_help">Ayuda</string>
+    <string name="settings_telegram">Grupo de Telegram</string>
     <string name="settings_category_streamingcommunity">Ajustes para StreamingCommunity</string>
     <string name="settings_category_streamingcommunity_domain">Ajustes para StreamingCommunity</string>
     <string name="settings_close_app">Cerrer aplicación</string>
@@ -194,4 +195,12 @@
     <string name="voice_error_generic">Ocurrió un error al iniciar el reconocimiento de voz.</string>
     <string name="voice_error_no_result">No se detectó ninguna entrada de voz.</string>
     <string name="voice_prompt">Habla ahora</string>
+    
+    <string name="backup_export_success">¡Copia de seguridad exportada correctamente!</string>
+    <string name="backup_export_error_write">Error al exportar la copia de seguridad.</string>
+    <string name="backup_data_not_generated">Error: datos de copia de seguridad no generados.</string>
+    <string name="backup_import_success">¡Copia de seguridad importada correctamente! Reinicia la app para aplicar los cambios.</string>
+    <string name="backup_import_error">Error al importar la copia de seguridad.</string>
+    <string name="backup_import_empty_file">Error: el archivo de copia de seguridad está vacío o no se puede leer.</string>
+    <string name="backup_import_read_error">Error al leer o procesar el archivo de copia de seguridad.</string>
 </resources>
