--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -10,7 +10,7 @@
     <string name="update_release_notes">Notas de la versión</string>
     <string name="update_later">Más tarde</string>
     <string name="update">Actualizar</string>
-    <string name="app_layout">"Diseño de la aplicación "</string>
+    <string name="app_layout">"Diseño de la aplicación</string>
     <string name="app_layout_auto">Automático</string>
     <string name="app_layout_mobile">Diseño para móviles</string>
     <string name="app_layout_tv">Diseño para TV</string>
@@ -21,7 +21,7 @@
     <string name="main_menu_search">Buscar</string>
     <string name="main_menu_home">Inicio</string>
     <string name="main_menu_movies">Películas</string>
-    <string name="main_menu_tv_shows">Series de televisión</string>
+    <string name="main_menu_tv_shows">Series</string>
     <string name="main_menu_settings">Ajustes</string>
     <string name="search_input_hint">Buscar película, serie</string>
     <string name="home_swiper_watch_now">Ver ahora</string>
@@ -35,16 +35,16 @@
     <string name="option_show_mark_all_previous_watched">Marcar como visto hasta aquí</string>
     <string name="option_show_mark_all_previous_unwatched">Marcar como no visto hasta aquí</string>
     <string name="option_show_unwatched">Marcar como no visto</string>
-    <string name="option_clear_program">Quitar de seguir viendo</string>
+    <string name="option_clear_program">Quitar de continuar viendo</string>
     <string name="option_cancel">Cancelar</string>
-    <string name="episode_item_info">S%d E%d • %s</string>
+    <string name="episode_item_info">T%d E%d • %s</string>
     <string name="episode_item_info_episode_only">E%d • %s</string>
     <string name="tv_show_item_episode_number">E%d</string>
-    <string name="tv_show_item_season_number_episode_number">S%d E%d</string>
-    <string name="tv_show_item_type">TV</string>
+    <string name="tv_show_item_season_number_episode_number">T%d E%d</string>
+    <string name="tv_show_item_type">Serie</string>
     <string name="tv_show_runtime_hours_minutes">%d h %d min</string>
     <string name="tv_show_runtime_minutes">%d min</string>
-    <string name="tv_show_watch_season_episode">Ver S%d E%d</string>
+    <string name="tv_show_watch_season_episode">Ver T%d E%d</string>
     <string name="tv_show_watch_episode">Ver E%d</string>
     <string name="tv_show_trailer">Tráiler</string>
     <string name="tv_show_seasons">Temporadas</string>
@@ -65,16 +65,16 @@
     <string name="people_biography">Bipgrafía</string>
     <string name="people_read_more">Leer más ></string>
     <string name="genre_header_name">%s Películas y Series</string>
-    <string name="player_subtitle_tv_show">S%d E%d • %s</string>
+    <string name="player_subtitle_tv_show">T%d E%d • %s</string>
     <string name="player_subtitle_tv_show_episode_only">E%d • %s</string>
-    <string name="player_picture_in_picture_not_supported">PIP incompatible con su dispositivo</string>
+    <string name="player_picture_in_picture_not_supported">PIP no es compatible con tu dispositivo</string>
     <string name="player_external_player_title">Reproducir con</string>
-    <string name="player_external_player_error_video">Video todavía no cargado</string>
+    <string name="player_external_player_error_video">El vídeo todavía no está cargado</string>
     <string name="player_aspect_ratio_fit">Ajustar a la pantalla</string>
     <string name="player_aspect_ratio_fill">Estirar</string>
     <string name="player_aspect_ratio_zoom">Zoom</string>
     <string name="player_settings_title">Ajustes</string>
-    <string name="player_settings_quality_title">Calidad para video actual</string>
+    <string name="player_settings_quality_title">Calidad para vídeo actual</string>
     <string name="player_settings_quality_label">Calidad</string>
     <string name="player_settings_quality_sub_label_auto">Auto (%dp)</string>
     <string name="player_settings_quality_auto">Auto</string>
@@ -84,7 +84,7 @@
     <string name="player_settings_audio_label">Audio</string>
     <string name="player_settings_subtitles_title">Subtítulos</string>
     <string name="player_settings_subtitles_label">Subtítulos</string>
-    <string name="player_settings_subtitles_off">Off</string>
+    <string name="player_settings_subtitles_off">Desactivado</string>
     <string name="player_settings_caption_style_title">Estilo de subtítulos</string>
     <string name="player_settings_caption_style_label">Estilo de subtítulos</string>
     <string name="player_settings_caption_style_sub_label">Cambiar color de texto y estilo de fondo</string>
@@ -129,7 +129,7 @@
     <string name="player_settings_caption_style_background_color_blue">Azúl</string>
     <string name="player_settings_caption_style_background_color_magenta">Magenta</string>
     <string name="player_settings_caption_style_background_color_red">Rojo</string>
-    <string name="player_settings_caption_style_background_color_white">blanco</string>
+    <string name="player_settings_caption_style_background_color_white">Blanco</string>
     <string name="player_settings_caption_style_background_opacity_title">Opacidad de fondo</string>
     <string name="player_settings_caption_style_background_opacity_label">Opacidad de fondo</string>
     <string name="player_settings_caption_style_background_opacity_0">0%</string>
@@ -169,7 +169,7 @@
     <string name="player_settings_speed_2">× 2</string>
     <string name="player_settings_servers_title">Servidores</string>
     <string name="player_settings_servers_label">Servidores</string>
-    <string name="settings_about">Sobre</string>
+    <string name="settings_about">Acerca de</string>
     <string name="settings_about_version">Versión</string>
     <string name="settings_about_version_name">Versión %s</string>
     <string name="settings_help">Ayuda</string>
@@ -195,7 +195,9 @@
     <string name="voice_error_generic">Ocurrió un error al iniciar el reconocimiento de voz.</string>
     <string name="voice_error_no_result">No se detectó ninguna entrada de voz.</string>
     <string name="voice_prompt">Habla ahora</string>
-    
+    <string name="watch_trailer_with">Ver tráiler con...</string>
+    <string name="youtube">YouTube</string>
+    <string name="smarttube">SmartTube</string>
     <string name="backup_export_success">¡Copia de seguridad exportada correctamente!</string>
     <string name="backup_export_error_write">Error al exportar la copia de seguridad.</string>
     <string name="backup_data_not_generated">Error: datos de copia de seguridad no generados.</string>
