feat: Animefenix server names from markup, "Clear cache," auto-clear 409 with anti-loop
- AnimefenixProvider
  - Extract server names from the text of the last <span> in .episode-page__servers-list li a, aligned by DOM order to the URLs

- UI error overlay
  - Added "Clear cache" button under "Retry."
  - Click: clear app cache, "Cache cleared" toast, then retry the current tab.

- Auto-clear cache and loop prevention
  - On HTTP 409, auto-clear+retry only once per screen with local flag.
  - If the error persists, the overlay is shown without loops.

- StreamingCommunityProvider
  - Removed RetryOn409Interceptor because it was not working and is no longer needed.

- Strings
  - Added: `loading_error_clear_cache`, `clear_cache_done`, `clear_cache_done_409` with localizations

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -4,6 +4,7 @@
 
 	<string name="loading_error_title">حدث خطأ</string>
 	<string name="loading_error_retry">إعادة المحاولة</string>
+	<string name="loading_error_clear_cache">مسح ذاكرة التخزين المؤقت</string>
 
 	<string name="update_title">تحديث جديد متاح</string>
 	<string name="update_message">يتوفر إصدار جديد من التطبيق!</string>
@@ -113,6 +114,8 @@
 	<string name="settings_autoplay_off">إيقاف</string>
 	<string name="autoplay_settings">إعدادات التشغيل التلقائي</string>
 	<string name="miscelaneous_title">متفرقات</string>
+	<string name="clear_cache_done">تم مسح الذاكرة المؤقتة</string>
+	<string name="clear_cache_done_409">تم مسح الذاكرة المؤقتة تلقائيًا بسبب خطأ HTTP 409</string>
 	<string name="voice_search">بحث صوتي</string>
 	<string name="voice_error_no_match">لم يتم التعرف على أي شيء</string>
 	<string name="voice_error_timeout">انتهت المهلة</string>
