--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="loading_error_title">Ein Fehler ist aufgetreten</string>
     <string name="loading_error_retry">Erneut versuchen</string>
+    
+    <string name="loading_error_clear_cache">Cache leeren</string>
 
     <string name="update_title">Aktualisierung verfügbar</string>
     <string name="update_message">Eine neue Version der App ist verfügbar!</string>
@@ -200,6 +202,8 @@
     <string name="settings_autoplay_off">Aus</string>
     <string name="autoplay_settings">Automatische Wiedergabeeinstellungen</string>
     <string name="miscelaneous_title">Sonstiges</string>
+    <string name="clear_cache_done">Cache geleert</string>
+    <string name="clear_cache_done_409">Cache automatisch wegen HTTP 409 geleert</string>
     <string name="voice_search">Sprachsuche</string>
     <string name="voice_error_no_match">Nichts erkannt</string>
     <string name="voice_error_timeout">Zeitüberschreitung</string>
